# XCom

./: .gitignore  README.md  build.sh
XCom.xcodeproj/: project.pbxproj
XCom.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
libs/iOS/xcom.framework/: xcom
libs/iOS/xcom.framework/Headers/: xc_time.h
libs/include/: xc_string.h
libs/macOS/xcom.framework/Headers/: xc_string_util.h  xc_sys_def.h  xc_type_def.h
new/xcom/: main.cpp  xc_string.cpp  xc_string.h  xcom.h  xcom_config.h  xcom_const.h  xcom_log.h  xcom_mmap_file.cpp  xcom_mmap_file.h  xcom_path.cpp  xcom_path.h  xcom_sys_def.h  xcom_tick.cpp  xcom_tick.h  xcom_tick_util.cpp  xcom_tick_util.h  xcom_type_def.h  xcom_util_bootrun.h  xcom_var_struct.cpp  xcom_var_struct.h  xtypes.h
new/xcom.xcodeproj/: project.pbxproj
new/xcom.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
new/xcom/xcom_log/include/: xcom_xlog.h
new/xcom/xcom_log/src/: xcom_log.cpp  xcom_xlog.cpp  xcom_xlog_core.cpp  xcom_xlog_core.h  xcom_xlog_struct.h
new/xcom/xlog/: xcom_log.cpp  xcom_logger.cpp  xcom_logger.h  xcom_logger_pri.cpp  xcom_logger_pri.h  xcom_logger_struct.h  xcom_xlog.cpp  xcom_xlog.h
new/xcom/xlog/include/: xcom_logger.h
test_xcom/test_3rd/: test_3rd.cpp
test_xcom/test_3rd/test_3rd.xcodeproj/: project.pbxproj
test_xcom/test_3rd/test_3rd.xcodeproj/xcuserdata/alexichen.xcuserdatad/xcschemes/: test_3rd.xcscheme
test_xcom/test_base/test_base.xcodeproj/: project.pbxproj
test_xcom/test_base/test_base.xcodeproj/xcuserdata/alexichen.xcuserdatad/xcschemes/: test_base.xcscheme
xcom/: .CMakeLists.txt.swp  CMakeLists.txt  xcom.cmake
xcom/3rd/: 3rd.cmake
xcom/3rd/curl/: curl.cmake  tbasictypes.h  tconnection.cpp  tconnection_operation.cpp  tconnection_operation.h  tconnection_operation_queue.h  tlog.h  trequest.cpp  trequest.h  tresponse.cpp  tresponse.h
xcom/3rd/json/: assertions.h  config.h  forwards.h  json.cmake  json_value.cpp
xcom/3rd/message_loop/: message_loop.cmake  tlazy_instance.cpp  tlazy_instance.h  tmessage_loop.cpp  tmessage_loop.h  tmessage_loop_libevent.cpp  tmessage_pump_default.cpp  tmessage_pump_default.h
xcom/3rd/thread/: tdispatch.cpp  thread.cmake  tthread.cpp  tthread.h
xcom/3rd/time/: time.cmake  ttime.cpp  ttime.h
xcom/base/: base.cmake  xc_string.cpp  xc_string.h  xc_sys_def.h  xc_var.cpp  xc_var.h
xcom/base/test/: test_scopedlock.cpp  xcvar.h
xcom/base/test/test_scropedlock/test_scropedlock.xcodeproj/: project.pbxproj
xcom/base/test/test_scropedlock/test_scropedlock.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
xcom/dispatch/Dispatch/Dispatch/: main.m  xc_dispatch.cpp  xc_dispatch.hpp  xc_thread.cpp  xc_thread.hpp
xcom/dispatch/Dispatch/Dispatch.xcodeproj/: project.pbxproj
xcom/util/: util.cmake
xcom/util/path/: xc_path.cpp  xc_path.h
xcom/util/string/: string.cmake  xc_string_util.cpp
xcom/util/time/: time.cmake  xc_time.cpp  xc_time.h
xcomvar/xcomvar/: log  main.cpp  xcom_data.cpp  xcom_data.h  xcom_var_struct.cpp  xcom_var_struct.h  xcom_var_type.cpp  xcom_var_type.h  xcom_var_value.cpp  xcom_var_value.h
xcomvar/xcomvar.xcodeproj/: project.pbxproj
xcomvar/xcomvar.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
xcomvar/xcomvar.xcodeproj/project.xcworkspace/xcuserdata/alexi.xcuserdatad/: UserInterfaceState.xcuserstate
xcomvar/xcomvar.xcodeproj/xcuserdata/alexi.xcuserdatad/xcschemes/: xcschememanagement.plist
xcomvar/xcomvar.xcodeproj/xcuserdata/alexichen.xcuserdatad/xcschemes/: xcomvar.xcscheme
